<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="220dp"
        android:contentDescription="@string/header"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ring" />

    <TextView
        android:id="@+id/head"
        android:layout_width="142dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="25"
        android:text="@string/sign_up"
        android:textAlignment="gravity"
        android:textColor="@color/gold"
        android:textColorHighlight="@color/white"
        android:textIsSelectable="false"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:drawableStart="@drawable/person"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_text"
        app:layout_constraintStart_toStartOf="@+id/username_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/lock"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:buttonTint="@color/gold"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/male"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/gold"
            android:minHeight="48dp"
            android:text="@string/female"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/sign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/hyper_link"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in_insted"
        android:textColor="@color/gold"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/sign_button"
        app:layout_constraintStart_toStartOf="@+id/sign_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_button" />

</androidx.constraintlayout.widget.ConstraintLayout>